Замена ссылок по сайту

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="header__left">
                 <div class="logo header__logo no-md">
                     <a
-                            href="/"
+                            href="/K-resultatu/"
                             title="Учебный центр 'К результату' - подготовка к ЕГЭ, ОГЭ и ВПР"
                     >
                         <picture>
@@ -49,7 +49,7 @@
                 </div>
                 <div class="logo header__logo md">
                     <a
-                            href="/"
+                            href="/K-resultatu/"
                             title="Учебный центр 'К результату' - подготовка к ЕГЭ, ОГЭ и ВПР"
                     >
                         <picture>
