--- a/policy.html
+++ b/policy.html
@@ -22,7 +22,7 @@
             <div class="header__left">
                 <div class="logo header__logo no-md">
                     <a
-                            href="/"
+                            href="/K-resultatu/"
                             title="Учебный центр 'К результату' - подготовка к ЕГЭ, ОГЭ и ВПР"
                     >
                         <picture>
@@ -41,7 +41,7 @@
                 </div>
                 <div class="logo header__logo md">
                     <a
-                            href="/"
+                            href="/K-resultatu/"
                             title="Учебный центр 'К результату' - подготовка к ЕГЭ, ОГЭ и ВПР"
                     >
                         <picture>
@@ -64,36 +64,36 @@
                 <nav class="menu header__menu no-md">
                     <ul class="menu__list">
                         <li class="menu__item menu__item_highlighted">
-                            <a href="/#promotion" class="menu__link">
+                            <a href="/K-resultatu/#promotion" class="menu__link">
                                 <span class="menu__text">Акции</span>
                             </a>
                         </li>
                         <li class="menu__item">
-                            <a href="/#subjects" class="menu__link">
+                            <a href="/K-resultatu/#subjects" class="menu__link">
                                 <span class="menu__text">Предметы</span>
                             </a>
                         </li>
                         <li class="menu__item">
-                            <a href="/#format" class="menu__link">
+                            <a href="/K-resultatu/#format" class="menu__link">
                                         <span class="menu__text"
                                         >Формат занятий</span
                                         >
                             </a>
                         </li>
                         <li class="menu__item">
-                            <a href="/#advantages" class="menu__link">
+                            <a href="/K-resultatu/#advantages" class="menu__link">
                                         <span class="menu__text"
                                         >Преимущества</span
                                         >
                             </a>
                         </li>
                         <li class="menu__item">
-                            <a href="/#about" class="menu__link">
+                            <a href="/K-resultatu/#about" class="menu__link">
                                 <span class="menu__text">О нас</span>
                             </a>
                         </li>
                         <li class="menu__item">
-                            <a href="/#contacts" class="menu__link">
+                            <a href="/K-resultatu/#contacts" class="menu__link">
                                 <span class="menu__text">Контакты</span>
                             </a>
                         </li>
@@ -121,7 +121,7 @@
         <div class="page_text_wrap">
             <div class="container section__container">
                 <div class="breadcrumb">
-                    <a href="/" class="breadcrumb__item">Главная</a>
+                    <a href="/K-resultatu/" class="breadcrumb__item">Главная</a>
                     <span class="breadcrumb__separator">&mdash;</span>
                     <span class="breadcrumb__item">Политика обработки персональных данных</span>
                 </div>
@@ -472,7 +472,7 @@
                 <p>6.5.6. Выбранный способ уничтожения персональных данных должен обеспечивать невозможность их восстановления.</p>
                 <p>6.5.7. В результате уничтожения персональных данных уполномоченным должностным лицом Оператора персональных данных составляется акт об уничтожении персональных данных в свободной форме, который хранится у Оператора в течение последующих 3 лет. Набор реквизитов акта об уничтожении персональных данных указан в приказе Роскомнадзора от 28.10.2022 № 179.</p>
                 <p>6.5.8. Если уничтоженные персональные данные хранились в электронном виде, наряду с актом об уничтожении персональных данных уполномоченным должностным лицом также производится выгрузка из журнала регистрации событий в информационной системе.</p>
-                <a href="/" class="back-to-main">&larr; На главную</a>
+                <a href="/K-resultatu/" class="back-to-main">&larr; На главную</a>
             </div>
         </div>
 
@@ -483,36 +483,36 @@
                 <div class="popup__menu">
                     <ul class="menu__list">
                         <li class="menu__item menu__item_highlighted">
-                            <a href="/#promotion" class="menu__link">
+                            <a href="/K-resultatu/#promotion" class="menu__link">
                                 <span class="menu__text">Акции</span>
                             </a>
                         </li>
                         <li class="menu__item">
-                            <a href="/#subjects" class="menu__link">
+                            <a href="/K-resultatu/#subjects" class="menu__link">
                                 <span class="menu__text">Направления подготовки</span>
                             </a>
                         </li>
                         <li class="menu__item">
-                            <a href="/#format" class="menu__link">
+                            <a href="/K-resultatu/#format" class="menu__link">
                                             <span class="menu__text"
                                             >Формат занятий</span
                                             >
                             </a>
                         </li>
                         <li class="menu__item">
-                            <a href="/#advantages" class="menu__link">
+                            <a href="/K-resultatu/#advantages" class="menu__link">
                                             <span class="menu__text"
                                             >Преимущества</span
                                             >
                             </a>
                         </li>
                         <li class="menu__item">
-                            <a href="/#about" class="menu__link">
+                            <a href="/K-resultatu/#about" class="menu__link">
                                 <span class="menu__text">О нас</span>
                             </a>
                         </li>
                         <li class="menu__item">
-                            <a href="/#contacts" class="menu__link">
+                            <a href="/K-resultatu/#contacts" class="menu__link">
                                 <span class="menu__text">Контакты</span>
                             </a>
                         </li>
