--- a/stat_agreement.html
+++ b/stat_agreement.html
@@ -22,7 +22,7 @@
             <div class="header__left">
                 <div class="logo header__logo no-md">
                     <a
-                            href="/"
+                            href="/K-resultatu/"
                             title="Учебный центр 'К результату' - подготовка к ЕГЭ, ОГЭ и ВПР"
                     >
                         <picture>
@@ -41,7 +41,7 @@
                 </div>
                 <div class="logo header__logo md">
                     <a
-                            href="/"
+                            href="/K-resultatu/"
                             title="Учебный центр 'К результату' - подготовка к ЕГЭ, ОГЭ и ВПР"
                     >
                         <picture>
@@ -64,36 +64,36 @@
                 <nav class="menu header__menu no-md">
                     <ul class="menu__list">
                         <li class="menu__item menu__item_highlighted">
-                            <a href="/#promotion" class="menu__link">
+                            <a href="/K-resultatu/#promotion" class="menu__link">
                                 <span class="menu__text">Акции</span>
                             </a>
                         </li>
                         <li class="menu__item">
-                            <a href="/#subjects" class="menu__link">
+                            <a href="/K-resultatu/#subjects" class="menu__link">
                                 <span class="menu__text">Предметы</span>
                             </a>
                         </li>
                         <li class="menu__item">
-                            <a href="/#format" class="menu__link">
+                            <a href="/K-resultatu/#format" class="menu__link">
                                         <span class="menu__text"
                                         >Формат занятий</span
                                         >
                             </a>
                         </li>
                         <li class="menu__item">
-                            <a href="/#advantages" class="menu__link">
+                            <a href="/K-resultatu/#advantages" class="menu__link">
                                         <span class="menu__text"
                                         >Преимущества</span
                                         >
                             </a>
                         </li>
                         <li class="menu__item">
-                            <a href="/#about" class="menu__link">
+                            <a href="/K-resultatu/#about" class="menu__link">
                                 <span class="menu__text">О нас</span>
                             </a>
                         </li>
                         <li class="menu__item">
-                            <a href="/#contacts" class="menu__link">
+                            <a href="/K-resultatu/#contacts" class="menu__link">
                                 <span class="menu__text">Контакты</span>
                             </a>
                         </li>
@@ -121,7 +121,7 @@
         <div class="page_text_wrap">
             <div class="container section__container">
                 <div class="breadcrumb">
-                    <a href="/" class="breadcrumb__item">Главная</a>
+                    <a href="/K-resultatu/" class="breadcrumb__item">Главная</a>
                     <span class="breadcrumb__separator">&mdash;</span>
                     <span class="breadcrumb__item">Согласие на обработку персональных данных с помощью сервиса «Яндекс.Метрика»</span>
                 </div>
@@ -137,7 +137,7 @@
                 <p>Субъект персональных данных обязуется сам настроить свое оборудование таким способом, чтобы оно обеспечивало адекватный его желаниям режим работы и уровень защиты данных файлов "cookie", а Оператор не предоставляет технологических и правовых консультаций на темы подобного характера.</p>
                 <p>9. Порядок уничтожения персональных данных при достижении цели их обработки или при наступлении иных законных оснований: лицо, ответственное за обработку персональных данных, производит стирание данных методом перезаписи (замена всех единиц хранения информации на "0") с составлением акта об уничтожении персональных данных.</p>
                 <p>Продолжая использовать сайт https://kresultatu.ru/ пользователь тем самым предоставляет свое согласие Оператору, на автоматизированную и неавтоматизированную обработку данных пользователя с помощью сервиса «Яндекс. Метрика».</p>
-                <a href="/" class="back-to-main">&larr; На главную</a>
+                <a href="/K-resultatu/" class="back-to-main">&larr; На главную</a>
             </div>
         </div>
 
@@ -148,36 +148,36 @@
                 <div class="popup__menu">
                     <ul class="menu__list">
                         <li class="menu__item menu__item_highlighted">
-                            <a href="/#promotion" class="menu__link">
+                            <a href="/K-resultatu/#promotion" class="menu__link">
                                 <span class="menu__text">Акции</span>
                             </a>
                         </li>
                         <li class="menu__item">
-                            <a href="/#subjects" class="menu__link">
+                            <a href="/K-resultatu/#subjects" class="menu__link">
                                 <span class="menu__text">Направления подготовки</span>
                             </a>
                         </li>
                         <li class="menu__item">
-                            <a href="/#format" class="menu__link">
+                            <a href="/K-resultatu/#format" class="menu__link">
                                             <span class="menu__text"
                                             >Формат занятий</span
                                             >
                             </a>
                         </li>
                         <li class="menu__item">
-                            <a href="/#advantages" class="menu__link">
+                            <a href="/K-resultatu/#advantages" class="menu__link">
                                             <span class="menu__text"
                                             >Преимущества</span
                                             >
                             </a>
                         </li>
                         <li class="menu__item">
-                            <a href="/#about" class="menu__link">
+                            <a href="/K-resultatu/#about" class="menu__link">
                                 <span class="menu__text">О нас</span>
                             </a>
                         </li>
                         <li class="menu__item">
-                            <a href="/#contacts" class="menu__link">
+                            <a href="/K-resultatu/#contacts" class="menu__link">
                                 <span class="menu__text">Контакты</span>
                             </a>
                         </li>
