--- a/user_agreement.html
+++ b/user_agreement.html
@@ -22,7 +22,7 @@
             <div class="header__left">
                 <div class="logo header__logo no-md">
                     <a
-                            href="/"
+                            href="/K-resultatu/"
                             title="Учебный центр 'К результату' - подготовка к ЕГЭ, ОГЭ и ВПР"
                     >
                         <picture>
@@ -41,7 +41,7 @@
                 </div>
                 <div class="logo header__logo md">
                     <a
-                            href="/"
+                            href="/K-resultatu/"
                             title="Учебный центр 'К результату' - подготовка к ЕГЭ, ОГЭ и ВПР"
                     >
                         <picture>
@@ -64,36 +64,36 @@
                 <nav class="menu header__menu no-md">
                     <ul class="menu__list">
                         <li class="menu__item menu__item_highlighted">
-                            <a href="/#promotion" class="menu__link">
+                            <a href="/K-resultatu/#promotion" class="menu__link">
                                 <span class="menu__text">Акции</span>
                             </a>
                         </li>
                         <li class="menu__item">
-                            <a href="/#subjects" class="menu__link">
+                            <a href="/K-resultatu/#subjects" class="menu__link">
                                 <span class="menu__text">Предметы</span>
                             </a>
                         </li>
                         <li class="menu__item">
-                            <a href="/#format" class="menu__link">
+                            <a href="/K-resultatu/#format" class="menu__link">
                                         <span class="menu__text"
                                         >Формат занятий</span
                                         >
                             </a>
                         </li>
                         <li class="menu__item">
-                            <a href="/#advantages" class="menu__link">
+                            <a href="/K-resultatu/#advantages" class="menu__link">
                                         <span class="menu__text"
                                         >Преимущества</span
                                         >
                             </a>
                         </li>
                         <li class="menu__item">
-                            <a href="/#about" class="menu__link">
+                            <a href="/K-resultatu/#about" class="menu__link">
                                 <span class="menu__text">О нас</span>
                             </a>
                         </li>
                         <li class="menu__item">
-                            <a href="/#contacts" class="menu__link">
+                            <a href="/K-resultatu/#contacts" class="menu__link">
                                 <span class="menu__text">Контакты</span>
                             </a>
                         </li>
@@ -121,7 +121,7 @@
         <div class="page_text_wrap">
             <div class="container section__container">
                 <div class="breadcrumb">
-                    <a href="/" class="breadcrumb__item">Главная</a>
+                    <a href="/K-resultatu/" class="breadcrumb__item">Главная</a>
                     <span class="breadcrumb__separator">&mdash;</span>
                     <span class="breadcrumb__item">Пользовательское соглашение</span>
                 </div>
@@ -229,7 +229,7 @@
                 <p>7.2. Получатель претензии в течение 10 календарных дней со дня ее получения, письменно уведомляет заявителя претензии о результатах рассмотрения претензии.</p>
                 <p>7.3. При невозможности разрешить спор в добровольном порядке любая из Сторон вправе обратиться в суд за защитой своих прав, которые предоставлены им действующим законодательством.</p>
                 <p>7.4. Любой иск в отношении условий использования Сайта должен быть предъявлен в течение 20 дней после возникновения оснований для его подачи.</p>
-                <a href="/" class="back-to-main">&larr; На главную</a>
+                <a href="/K-resultatu/" class="back-to-main">&larr; На главную</a>
             </div>
         </div>
 
@@ -240,36 +240,36 @@
                 <div class="popup__menu">
                     <ul class="menu__list">
                         <li class="menu__item menu__item_highlighted">
-                            <a href="/#promotion" class="menu__link">
+                            <a href="/K-resultatu/#promotion" class="menu__link">
                                 <span class="menu__text">Акции</span>
                             </a>
                         </li>
                         <li class="menu__item">
-                            <a href="/#subjects" class="menu__link">
+                            <a href="/K-resultatu/#subjects" class="menu__link">
                                 <span class="menu__text">Направления подготовки</span>
                             </a>
                         </li>
                         <li class="menu__item">
-                            <a href="/#format" class="menu__link">
+                            <a href="/K-resultatu/#format" class="menu__link">
                                             <span class="menu__text"
                                             >Формат занятий</span
                                             >
                             </a>
                         </li>
                         <li class="menu__item">
-                            <a href="/#advantages" class="menu__link">
+                            <a href="/K-resultatu/#advantages" class="menu__link">
                                             <span class="menu__text"
                                             >Преимущества</span
                                             >
                             </a>
                         </li>
                         <li class="menu__item">
-                            <a href="/#about" class="menu__link">
+                            <a href="/K-resultatu/#about" class="menu__link">
                                 <span class="menu__text">О нас</span>
                             </a>
                         </li>
                         <li class="menu__item">
-                            <a href="/#contacts" class="menu__link">
+                            <a href="/K-resultatu/#contacts" class="menu__link">
                                 <span class="menu__text">Контакты</span>
                             </a>
                         </li>
