Правка относительных ссылок на фото

--- a/index.html
+++ b/index.html
@@ -807,7 +807,7 @@
                                 </a>
                             </div>
                             <div class="about__block">
-                                <a href="/img/interier7.jpg" data-fancybox="gallery">
+                                <a href="img/interier7.jpg" data-fancybox="gallery">
                                     <picture>
                                         <source type="image/webp" srcset="img/interier7.webp"/>
                                         <source srcset="img/interier7.jpg"/>
@@ -825,7 +825,7 @@
                                 </a>
                             </div>
                             <div class="about__block">
-                                <a href="/img/interier6.jpg" data-fancybox="gallery">
+                                <a href="img/interier6.jpg" data-fancybox="gallery">
                                     <picture>
                                         <source type="image/webp" srcset="img/interier6.webp"/>
                                         <source srcset="img/interier6.jpg"/>
